Fix lỗi scrollBar

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,6 @@
+body {
+  overflow: hidden;
+}
 #root {
   margin: 0;
   padding: 0;
