--- a/frontend/src/components/Admin/Admin.scss
+++ b/frontend/src/components/Admin/Admin.scss
@@ -12,7 +12,7 @@
            
         }
         .admin-main {
-             
+              height: calc(100vh - 40px);
         }
     }
 }
